--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,3 +8,12 @@ jobs:
     steps:
       - name: pulling git repo
         uses: actions/checkout@v4
+      - name: install python version 3.10
+        uses: actions/checkout@v4
+        with:
+          python-version: '3.10'
+      - run: python my_script.py
+      - name: update pip
+        run: python -m pip install --upgrade pip
+      - name: install all dependencies
+        run: pip install -r requirements.txt
