--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -16,7 +16,7 @@ services:
       - DATABASE_USERNAME=${DATABASE_USERNAME}
       - SECRET_KEY=${SECRET_KEY}
       - ALGORITHM=${ALGORITHM}
-      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE}
+      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES}
 
   postgres:
     image: postgres
