--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -33,14 +33,18 @@ jobs:
     steps:
       - name: pulling git repo
         uses: actions/checkout@v4
+
       - name: install python version 3.10
         uses: actions/checkout@v4
         with:
           python-version: '3.10'
+
       - name: update pip
         run: python -m pip install --upgrade pip
+
       - name: install all dependencies
         run: pip install -r requirements.txt
+
       - name: test with pytest
         run: |
           pip install pytest
@@ -59,13 +63,12 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.IMAGE_NAME }}
-        env:
-          DOCKER_METADATA_ANNOTATIONS_LEVELS: manifest,index
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi_sm
 
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: .
           tags: ${{ steps.meta.outputs.tags }}
           annotations: ${{ steps.meta.outputs.annotations }}
           push: true
