--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -51,6 +51,7 @@ jobs:
           pytest
 
       - name: Set up Docker Buildx
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
         uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
