--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -34,7 +34,7 @@ jobs:
       - name: pulling git repo
         uses: actions/checkout@v4
 
-      - name: install python version 3.10
+      - name: set up python
         uses: actions/checkout@v4
         with:
           python-version: '3.10'
