--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "devCommand": "uvicorn main:app --host 0.0.0.0 --post 3000",
+  "devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
   "builds": [
     {
       "src": "api/index.py",
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "ami/index.py"
+      "dest": "api/index.py"
     }
   ]
 }
