--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -51,6 +51,9 @@ jobs:
       - name: install all dependencies
         run: pip install -r requirements.txt
 
+      - name: Build project
+        run: vercel build || echo "Build step not needed for Python"
+
       - name: test with pytest
         run: |
           pip install pytest
